--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -58,6 +58,27 @@
                 android:layout_width="match_parent"
                 android:layout_weight="1"/>
     </TableRow>
+        <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <TextView
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:paddingRight="10dp"
+                    android:text=""/>
+
+            <TextView
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"/>
+            <ImageView
+                    android:id="@+id/cmdHideShow"
+                    android:src="@drawable/hide"
+                    android:layout_gravity="center_vertical"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content" />
+        </TableRow>
     </TableLayout>
         <Button
                 android:layout_gravity="center_horizontal"
