--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,56 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:orientation="vertical"
-        tools:context=".MainActivity"
-        android:gravity="center_vertical"
-        android:padding="@dimen/activity_padding"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:padding="@dimen/activity_padding"
+              android:gravity="center_horizontal"
+              android:orientation="vertical"
+              tools:context=".MainActivity">
 
-    <TableLayout
+
+    <ImageView
+            android:id="@+id/imgBiometric"
+            android:layout_margin="50dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:src="@drawable/biometric"/>
+
+    <LinearLayout
+            android:id="@+id/layoutPassword"
+            android:visibility="invisible"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        <TableRow>
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:paddingEnd="15dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/prompt_password"/>
-            <EditText
-                    android:id="@+id/password"
-                    android:layout_weight="1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/prompt_password"
-                    android:inputType="textPassword"
-                    android:selectAllOnFocus="true"/>
-            <ImageView
-                    android:id="@+id/cmdHideShow"
-                    android:src="@drawable/show"
-                    android:layout_gravity="center_vertical"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content" />
-        </TableRow>
-        <TableRow>
-            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"/>
-            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"/>
-        </TableRow>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+        <TextView
+                android:layout_width="wrap_content"
+                android:paddingEnd="15dp"
+                android:layout_height="wrap_content"
+                android:text="@string/prompt_password"/>
+        <EditText
+                android:id="@+id/password"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/prompt_password"
+                android:inputType="textPassword"
+                android:selectAllOnFocus="true"/>
+        <ImageView
+                android:id="@+id/cmdHideShow"
+                android:src="@drawable/hide"
+                android:layout_gravity="center_vertical"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"/>
+    </LinearLayout>
 
-        <TableRow>
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:paddingEnd="15dp"
-                    android:layout_height="wrap_content"
-                    android:text=""/>
-            <Button
-                    android:id="@+id/cmdLogin"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@android:string/ok"/>
-        </TableRow>
-        <Space android:layout_width="match_parent" android:layout_height="150dp"/>
+    <Button
+            android:layout_marginTop="30dp"
+            android:visibility="invisible"
+            android:id="@+id/cmdLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@android:string/ok"/>
 
-    </TableLayout>
+    <TextView
+            android:layout_marginTop="30dp"
+            android:id="@+id/authStatusTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_auth"
+            android:textSize="20sp"/>
+
+    <Button
+            android:id="@+id/authBtn"
+            android:text="@string/prompt_auth"
+            android:layout_marginTop="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
 </LinearLayout>
