--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,14 +11,14 @@
 
     <ImageView
             android:id="@+id/imgBiometric"
-            android:layout_margin="50dp"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:src="@drawable/biometric"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/main_icon" android:layout_marginBottom="50dp" android:adjustViewBounds="true"
+            android:layout_marginTop="30dp"/>
 
     <LinearLayout
             android:id="@+id/layoutPassword"
-            android:visibility="invisible"
+            android:visibility="visible"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -45,25 +45,10 @@
 
     <Button
             android:layout_marginTop="30dp"
-            android:visibility="invisible"
+            android:visibility="visible"
             android:id="@+id/cmdLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@android:string/ok"/>
-
-    <TextView
-            android:layout_marginTop="30dp"
-            android:id="@+id/authStatusTv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/btn_auth"
-            android:textSize="20sp"/>
-
-    <Button
-            android:id="@+id/authBtn"
-            android:text="@string/prompt_auth"
-            android:layout_marginTop="30dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
 
 </LinearLayout>
