--- a/app/src/main/res/layout/activity_options.xml
+++ b/app/src/main/res/layout/activity_options.xml
@@ -100,7 +100,7 @@
                     android:layout_width="wrap_content"/>
             <TextView
                     android:gravity="center_horizontal"
-                    android:text="@string/prompt_change_password"
+                    android:text="@string/prompt_exit"
                     android:layout_weight="1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"/>
